--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <meta name="author" content="SwitchIT.com.ar Argentina">
   <meta name="robots" content="noarchive">
 
-  <title>Switchit Argentina</title>
+  <title>Switchit Argentina - Contact</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,25 +44,19 @@
                 <a class="nav-link pl-0" href="./"><i class="fa fa-home fa-fw"></i> <span class="">HOME</span></a>
               </li>
               <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-1s">
-                <a class="nav-link pl-0 dropdown-toggle text-nowrap" href="#m1" data-parent="#navbar1"
-                  data-toggle="collapse" data-target="#m1" aria-expanded="false">
+                <a class="nav-link pl-0 dropdown-toggle text-nowrap" href="./categories.html">
                   <i class="fa fa-cart-plus fa-fw"></i> <span class="">PRODUCTOS</span>
                 </a>
-                <div class="collapse" id="m1">
-                  <ul class="flex-column nav">
-                    <a class="nav-link px-0 text-truncate" href="#">Sub</a>
-                    <a class="nav-link px-0 text-truncate" href="#">Sub longer</a>
-                  </ul>
-                </div>
               </li>
               <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-2s">
-                <a class="nav-link pl-0" href="./about-us.html"><i class="fa fa-user-ninja fa-fw"></i> <span
-                    class="">QUIENES
-                    SOMOS</span></a>
+                <a class="nav-link pl-0" href="./about-us.html">
+                  <i class="fa fa-user-ninja fa-fw"></i> <span class="">QUIENES SOMOS</span>
+                </a>
               </li>
-              <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-3s">
-                <a class="nav-link pl-0" href="./contact.html"><i class="fa fa-address-book fa-fw"></i> <span
-                    class="">CONTACTO</span></a>
+              <li class="nav-item active wow animate__fadeInLeft animate__fast animate__delay-3s">
+                <a class="nav-link pl-0" href="./contact.html">
+                  <i class="fa fa-address-book fa-fw"></i> <span class="">CONTACTO</span>
+                </a>
               </li>
             </ul>
           </div>
@@ -169,33 +163,6 @@
             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
         </section>
-        <footer class="bg-primary text-white border-success">
-          <div class="row m-0">
-            <div class="col col-md-8 p-0">
-              <ul class="text-center h-100 m-0 p-4 d-flex flex-column justify-content-center">
-                <li>Texto de información de contacto</li>
-                <li>
-                  <a href="#">Links de contacto</a>
-                </li>
-                <li>Texto de información de contacto -
-                  <a href="#">Links de contacto</a>
-                </li>
-                <li>
-                  <a href="./">Home</a> |
-                  <a href="./products.html">Productos</a> |
-                  <a href="./about-us.html">Quienes Somos</a> |
-                  <a href="./contact.html">Contacto</a>
-                </li>
-                <li class="mt-5">
-                  <a href="https://www.switchit.com.ar/">Switchit Template - 2020</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col p-0 img-footer">
-              <img class="img-fluid" src="img/home/bot.jpg" alt="imagen empresa footer">
-            </div>
-          </div>
-        </footer>
       </main>
     </div>
   </div>
