animate del login

--- a/login.html
+++ b/login.html
@@ -98,8 +98,8 @@
           </div>
         </nav>
       </aside>
-      <main class="col bg-login w-100 d-flex">
-        <form class="form-signin mx-auto w-25 align-self-center p-5 bg-success">
+      <main class="col bg-login w-100 d-flex wow animate__delay-1s animate__fadeIn animate__slow">
+        <form class="form-signin mx-auto w-25 align-self-center p-5 bg-success wow animate__fadeInDown animate__fast">
           <div class="text-center mb-4">
             <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
             <h2 class="mb-3 text-primary"><i class="fa fa-user"></i> LOGIN</h2>
@@ -107,7 +107,6 @@
               Bienvenidos al Login del Sitio
             </p>
           </div>
-
           <div class="form-label-group">
             <input type="text" id="inputName" class="form-control" placeholder="User name" required="" autofocus="">
             <label for="inputName">User name</label>
